fixed overflow of background element

--- a/src/app/workspace/workspace.component.scss
+++ b/src/app/workspace/workspace.component.scss
@@ -1,8 +1,10 @@
 .workspace {
   position: absolute;
-  height: fit-content;
+  height: 100vh; // FIXME this works good on zoom out, but crashes on zoom in
+  min-height: fit-content;
   width: 100%;
   min-width: fit-content;
   background-color: aqua;
   z-index: -1;
+  overflow: auto;
 }
